--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "NayLa-BOTZ",
+  "name": "˚₊·͟͟͟͟͟͟͞͞͞͞͞͞➳❥꒰𝖎𝖊𝖋𝖆 𝖗𝖆𝖜𝖗𝖗 𝖇𝖔𝖙𝖟٭꒱|ೃ࿔₊•",
   "description": "Lightweight WhatsApp Bot",
   "repository": "https://github.com/zevoffc/nayla",
   "logo": "https://node-js-sample.herokuapp.com/node.png",
